# mealplan-cli

./: .gitignore  AGENT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ENHANCEMENTS.md  MODEL.md  PLAN.md  RELEASE_CHECKLIST.md  REQUIREMENTS.md
docs/enhancements/: enhance-001-training-carb-meal-and-kcal-breakdown.md  enhance-002-calories-first-meal-macro-allocation.md  enhance-003-improve-calculation-accuracy.md
scripts/checks/: verify_install_workflow.py  verify_package_artifacts.py
scripts/ralph/: prd.json  progress.txt
src/mealplan/: __init__.py  __main__.py
src/mealplan_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tasks/: prd-enhance-001-training-carb-meal-and-kcal-breakdown.md  prd-enhance-002-calories-first-meal-macro-allocation.md  prd-enhance-003-improve-calculation-accuracy.md  prd-phase-1-foundation-scaffolding.md  prd-phase-10-golden-tests-packaging-release-readiness.md  prd-phase-2-canonical-contracts-and-validation.md  prd-phase-3-validation-layer.md  prd-phase-4-core-energy-macro-engines.md  prd-phase-5-training-fueling-engine.md  prd-phase-6-periodization-allocation-engine.md  prd-phase-7-meal-split-response-assembly.md  prd-phase-8-application-orchestration.md  prd-phase-9-cli-implementation.md
tests/cli/: test_calculate.py  test_error_handling.py  test_help.py  test_probe.py
tests/golden/: helpers.py  test_application_golden.py  test_cli_golden.py
tests/unit/: conftest.py  test_application_contracts.py  test_application_orchestration.py  (+10 more)
(+58 files in other folders)
