[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mealplan-cli"
version = "0.1.0"
description = "CLI for meal planning workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
]

[dependency-groups]
dev = [
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
mealplan = "mealplan.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
